* Sat Jul 16 2011 Thunor <thunorsif@hotmail.com>
- Updated the long forgotten about widget_get_type_from_pointer() which
  was in widgets.c and used exclusively by glade_support.c. I came across
  it whilst searching and found it to be only accounting for 20% of the
  widgets and I don't know what impact this would have had if any since
  only one application is using Glade. I've moved it to glade_support.c.

* Thu Jul 14 2011 Thunor <thunorsif@hotmail.com>
- Deprecated the badly named menu item <separator> widget and added an
  equivalent <menuitemseparator> (I'm reviewing the menu system).

* Wed Jul 13 2011 Thunor <thunorsif@hotmail.com>
- New widget: <hscale>.
- New widget: <vscale>.
- Connected up the GtkScale's "value_changed" signal in glade_support.c.

* Fri Jul 8 2011 Thunor <thunorsif@hotmail.com>
- Overhauled the copyright and license notices atop most source files.
  Quite a few were missing, some were only snippets of the license and
  some weren't attributed to anyone. Where applicable I've included
  myself in the copyright notices since I've introduced a fair amount of
  code now. Everything is now consistently (C) 2003-2007 László Pere
  which correctly covers the period of all of his work.
- Started adding the new hscale and vscale widgets.

* Thu Jul 7 2011 Thunor <thunorsif@hotmail.com>
- New widget: <comboboxentry></comboboxentry>, full action function set.
- Modified the behaviour of the comboboxentry widget's default directive
  so that text that isn't matched to any list items becomes the default
  entry text instead; very useful with has-focus="true".

* Wed Jul 6 2011 Thunor <thunorsif@hotmail.com>
- Modified the button and pixmap widgets' refresh functions so that
  images are only refreshed when the widgets have been realized.
- Fixed the gtkdialog_lexer.l errors I found as reported in issue 11.

* Tue Jul 5 2011 Thunor <thunorsif@hotmail.com>
- Added image positioning support to buttons with images and labels.
